--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <section id="home" class="card home-card">
+  <img src="profile.jpg" alt="Veena Madhuri" class="profile-pic">
+  <h1>Hi, I'm Veena Madhuri Makke</h1>
+  <p>Aspiring Software Engineer | Web Developer | Data Analyst | Graphic Designer </p>
+   <a href="resume.pdf" download class="btn">Download Resume</a>
+</section>
+
+
   <!-- Navbar -->
   <nav class="navbar">
     <div class="logo">Veena Madhuri Makke</div>
@@ -24,11 +32,10 @@
   <section id="about" class="card">
     <h2>About Me</h2>
     <p>
-      Hi 👋 I’m <strong>Veena Madhuri Makke</strong>, a passionate Software Engineer with hands-on 
-      experience in Web Development, Software Testing, and AI/ML.  
-      I love designing clean UI, solving real-world problems, and continuously learning new technologies.
+      Hi,👋 I’m Veena Madhuri. I recently completed my B.Tech in Computer Science and have gained hands-on experience through internships in software testing, AI, and data analytics. I also worked as an Associate Software Engineer at CGS Pvt. Ltd., where I was responsible for editing and formatting HTML content and ensuring accuracy using UltraEdit and Epsilon tools. Alongside, I have built projects in AI and web development, and I’m confident in Python, HTML/CSS, and testing tools like Selenium. I’m passionate about problem-solving and excited to apply my skills in a dynamic role where I can learn and contribute.
     </p>
   </section>
+
 
   <!-- Skills -->
   <section id="skills" class="card">
@@ -42,6 +49,32 @@
       <div class="skill-card"><strong>Design:</strong> Canva, Figma (Basic)</div>
     </div>
   </section>
+
+  <!-- Experience Section -->
+<section id="experience">
+  <div class="card">
+    <h2>Experience</h2>
+    <div class="experience-item">
+      <h3>Associate Software Engineer</h3>
+      <p><strong>CGS Pvt. Ltd, Nellore</strong> | May – Aug ’25</p>
+      <ul>
+        <li>Responsible for editing and formatting HTML content using UltraEdit for book publishing.</li>
+        <li>Used Epsilon for text processing, ensuring accuracy and quality in the final output.</li>
+      </ul>
+    </div>
+
+    <div class="experience-item">
+      <h3>Graphic Designer Intern</h3>
+      <p><strong>RSR Engineering College, Nellore</strong></p>
+      <ul>
+        <li>Designed and delivered 20+ visual assets including posters and brochures using Canva and Figma.</li>
+        <li>Collaborated with event teams to develop branding materials, improving audience engagement.</li>
+        <li>Managed tight project timelines and delivered high-quality creatives within deadlines.</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
 
   <!-- Projects -->
   <section id="projects" class="card">
