--- a/index.html
+++ b/index.html
@@ -31,9 +31,7 @@
   <!-- About -->
   <section id="about" class="card">
     <h2>About Me</h2>
-    <p>
-      Hi,👋 I’m Veena Madhuri. I recently completed my B.Tech in Computer Science and have gained hands-on experience through internships in software testing, AI, and data analytics. I also worked as an Associate Software Engineer at CGS Pvt. Ltd., where I was responsible for editing and formatting HTML content and ensuring accuracy using UltraEdit and Epsilon tools. Alongside, I have built projects in AI and web development, and I’m confident in Python, HTML/CSS, and testing tools like Selenium. I’m passionate about problem-solving and excited to apply my skills in a dynamic role where I can learn and contribute.
-    </p>
+    <p>Hi,👋 I’m Veena Madhuri. I recently completed my B.Tech in Computer Science and have gained hands-on experience through internships in software testing, AI, and data analytics. I also worked as an Associate Software Engineer at CGS Pvt. Ltd., where I was responsible for editing and formatting HTML content and ensuring accuracy using UltraEdit and Epsilon tools. Alongside, I have built projects in AI and web development, and I’m confident in Python, HTML/CSS, and testing tools like Selenium. I’m passionate about problem-solving and excited to apply my skills in a dynamic role where I can learn and contribute.</p>
   </section>
 
 
@@ -138,3 +136,4 @@
 
 </body>
 </html>
+
